# Rag--mastery

./: .gitignore  README.md  pyproject.toml
Hybrid Search Rag/: Advanced_RAG_Hybrid_Search_RAG.ipynb  README.md
Reranking/: README.md
Reranking/flash rerankers/: README.md
chatwithbook/: Ask A Book Questions.ipynb
knowledge-graph-llms-main/: README.md
langchain contectual retrieval/: README.md
lightrag/: README.md
lightrag/examples/: book.txt  lightrag_gemini_demo.py  lightrag_ollama_demo.py
lightrag/examples/dickens/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
merger and retriever/: README.md
multimodal rag/: README.md  langchain_multimodal (1).ipynb
multimodal rag/multimodal advance/: README.md  langchain_multimodal.ipynb
pdf chatbot/: Ask A Book Questions.ipynb  README.md
rank fusion/: README.md
self query retrieval/: README.md
